--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.19.0",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
-    "multer": "^1.4.1"
+    "multer": "^1.4.1",
+    "path": "^0.12.7"
   }
 }
